# cppcourse-brunel

./: CMakeLists.txt  Doxyfile.in  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  NeuronTest1.cpp  NeuronTest2.cpp  NeuronTest3.cpp  README.md  unittest1.cpp
